# library

./: .gitignore  BUILD.md  CHANGELOG.md  DOCKERHUB_SETUP.md  README.md
.github/workflows/: docker-publish.yml
Documents-es/: BUILD.md  CHANGELOG.md  DOCKERHUB_SETUP.md  QNAP_INSTALL.md  README.md  USER_GUIDE.md
apps/mac/: .gitignore  .npmrc  README.md  electron-builder.yml  eslint.config.mjs  forge.config.ts  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vitest.config.ts
apps/web/: .gitignore  next.config.ts  package-lock.json  package.json  postcss.config.mjs  proxy.ts  tsconfig.json  vitest.config.ts
openspec/: config.yaml
services/extractors-py/: README.md  pyproject.toml
services/extractors-py/alejandria_sidecar/: __init__.py  __main__.py  _bootstrap.py  cli.py
services/extractors-py/alejandria_sidecar/extractors/: __init__.py  audio.py  base.py  cbz.py  chm.py  dispatch.py  djvu.py  docx.py  epub.py  image.py  ocr.py  pdf.py  video.py
services/extractors-py/tests/: conftest.py  test_cli_dispatch.py  test_cli_help.py  test_dispatch.py  test_extract_audio.py  test_extract_cbz.py  test_extract_chm.py  test_extract_djvu.py  test_extract_docx.py  test_extract_epub.py  test_extract_image.py  test_extract_ocr.py  test_extract_pdf.py  test_extract_video.py
services/nas-backend/: Dockerfile  Dockerfile.pg  README.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
test/ci/: docker-compose-nas-backend.test.sh  docker-publish.test.sh  dockerfile-nas-backend.test.sh  docs-mirror.test.sh  (+1 more)
(+371 files in other folders)
